# Mr-dev68-config_handler

./: CMakeLists.txt  README.md
generator/: CMakeLists.txt
generator/samples/: app_one_config.json
generator/schemas/: app_one_config.json  app_two_config.json
src/: CMakeLists.txt  config_handler.cpp  config_handler.hpp  config_structures.hpp  default_configs.hpp
test/: CMakeLists.txt  test.cpp
